--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,6 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Noto+Serif:ital@1&family=Roboto+Slab:wght@300&family=Zen+Antique&display=swap');
 :root{
   --bg-navy:#0b192e;
   --text-color: #64ffda;
+  font-family: 'Noto Serif', serif;
+  font-family: 'Roboto Slab', serif;
+  font-family: 'Zen Antique', serif;
 }
 
 .card-image {
@@ -23,3 +27,4 @@
 .card:hover .image-overlay {
     opacity: 1;
   }
+ 
